# StageCue

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/stagecue/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  audio_module.cpp  native-lib.cpp
app/src/main/java/com/example/stagecue/: MainActivity.kt
app/src/main/java/com/example/stagecue/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/stagecue/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
